// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Builder /> > should allow to add content from catalogue > Catalogue opened 1`] = `
<div
  class="floatings"
>
  <div
    class="catalogue-menu"
    data-floating-ui-focusable=""
    data-placement="bottom"
    style="position: absolute; top: 0px; left: 0px;"
    tabindex="-1"
  >
    <div
      class="groups"
    >
      <div
        class="junipero tabs"
      >
        <ul
          class="titles"
        >
          <li
            class="title active"
          >
            <a
              href="#"
            >
              Core components
            </a>
          </li>
        </ul>
        <div
          class="content"
        >
          <div
            class="tab"
          >
            <div
              class="group oak-grid oak-grid-cols-2 oak-gap-2"
            >
              <a
                class="component component-row oak-flex oak-items-center oak-px-2 oak-py-1 oak-gap-2 junipero"
                draggable="false"
                href="#"
              >
                <i
                  class="icon junipero-icons !oak-text-2xl"
                >
                  row
                </i>
                <span
                  class="name"
                >
                  Row
                </span>
              </a>
              <a
                class="component component-empty-space oak-flex oak-items-center oak-px-2 oak-py-1 oak-gap-2 junipero"
                draggable="false"
                href="#"
              >
                <i
                  class="icon junipero-icons !oak-text-2xl"
                >
                  blank_space
                </i>
                <span
                  class="name"
                >
                  Blank space
                </span>
              </a>
              <a
                class="component component-title oak-flex oak-items-center oak-px-2 oak-py-1 oak-gap-2 junipero"
                draggable="false"
                href="#"
              >
                <i
                  class="icon junipero-icons !oak-text-2xl"
                >
                  title
                </i>
                <span
                  class="name"
                >
                  Title
                </span>
              </a>
              <a
                class="component component-text oak-flex oak-items-center oak-px-2 oak-py-1 oak-gap-2 junipero"
                draggable="false"
                href="#"
              >
                <i
                  class="icon junipero-icons !oak-text-2xl"
                >
                  multiline
                </i>
                <span
                  class="name"
                >
                  Text
                </span>
              </a>
              <a
                class="component component-image oak-flex oak-items-center oak-px-2 oak-py-1 oak-gap-2 junipero"
                draggable="false"
                href="#"
              >
                <i
                  class="icon junipero-icons !oak-text-2xl"
                >
                  image
                </i>
                <span
                  class="name"
                >
                  Image
                </span>
              </a>
              <a
                class="component component-button oak-flex oak-items-center oak-px-2 oak-py-1 oak-gap-2 junipero"
                draggable="false"
                href="#"
              >
                <i
                  class="icon junipero-icons !oak-text-2xl"
                >
                  button
                </i>
                <span
                  class="name"
                >
                  Button
                </span>
              </a>
              <a
                class="component component-foldable oak-flex oak-items-center oak-px-2 oak-py-1 oak-gap-2 junipero"
                draggable="false"
                href="#"
              >
                <i
                  class="icon junipero-icons !oak-text-2xl"
                >
                  foldable
                </i>
                <span
                  class="name"
                >
                  Foldable
                </span>
              </a>
              <a
                class="component component-clickable oak-flex oak-items-center oak-px-2 oak-py-1 oak-gap-2 junipero"
                draggable="false"
                href="#"
              >
                <i
                  class="icon junipero-icons !oak-text-2xl"
                >
                  clickable
                </i>
                <span
                  class="name"
                >
                  Clickable
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Builder /> > should allow to add content from catalogue > Content with row 1`] = `
<div>
  <div
    class="oak builder"
  >
    <div
      class="oak-flex oak-gap-2"
    >
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          undo
        </i>
      </button>
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          redo
        </i>
      </button>
    </div>
    <div
      class="elements oak-flex oak-flex-col oak-gap-4"
    >
      <div
        class="add-element oak-flex oak-justify-center"
      >
        <div
          class="catalogue"
        >
          <a
            class="handle oak-inline-flex oak-items-center oak-justify-center"
            draggable="false"
          >
            <i
              class="icon junipero-icons"
            >
              add
            </i>
          </a>
        </div>
      </div>
      <div
        class="oak element oak-flex-none type-row"
        draggable="false"
      >
        <div
          class="wrapper even"
        >
          <div
            class="drop-zone before"
          />
          <div
            class="row-content oak-flex oak-flex-wrap oak-w-full oak-gap-2 oak-items-flex-start"
          >
            <div
              class="column oak-flex oak-max-w-full oak-items-center oak-gap-2 oak-py-2 oak-flex-1"
            >
              <a
                class="divider prepend oak-flex oak-items-center"
                draggable="false"
                href="#"
              >
                <i
                  class="icon junipero-icons !oak-text-lg"
                >
                  add
                </i>
              </a>
              <div
                class="col-inner oak-flex-auto oak-flex oak-flex-col oak-gap-2"
              >
                <div
                  class="catalogue oak-inline-flex oak-self-center"
                >
                  <a
                    class="handle oak-inline-flex oak-items-center oak-justify-center"
                    draggable="false"
                  >
                    <i
                      class="icon junipero-icons"
                    >
                      add
                    </i>
                  </a>
                </div>
              </div>
              <a
                class="divider append oak-flex oak-items-center"
                draggable="false"
                href="#"
              >
                <i
                  class="icon junipero-icons !oak-text-lg"
                >
                  add
                </i>
              </a>
              <div
                class="size-info oak-absolute oak-bottom-1 oak-left-1"
              >
                <span>
                  <i
                    class="icon junipero-icons !oak-text-alternate-text-color oak-rotate-90 oak-block oak-cursor-help"
                  >
                    foldable
                  </i>
                </span>
              </div>
              <div
                class="options oak-flex oak-items-center oak-gap-0.5"
              >
                <a
                  class="option oak-flex oak-items-center oak-justify-center edit"
                  draggable="false"
                  href="#"
                >
                  <i
                    class="icon junipero-icons !oak-text-lg"
                  >
                    pen
                  </i>
                </a>
                <a
                  class="option oak-flex oak-items-center oak-justify-center remove"
                  draggable="false"
                  href="#"
                >
                  <i
                    class="icon junipero-icons !oak-text-lg"
                  >
                    close
                  </i>
                </a>
              </div>
            </div>
          </div>
          <div
            class="drop-zone after"
          />
        </div>
        <div
          class="options oak-flex oak-items-center oak-has-inner-content"
        >
          <a
            class="option oak-flex oak-items-center oak-justify-center remove"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              close
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center duplicate"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              copy
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center copy"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              copy_file
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center option oak-drag-handle draggable"
            draggable="true"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              pause
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center option"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              expand_less
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center edit"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              pen
            </i>
          </a>
        </div>
      </div>
      <div
        class="add-element oak-flex oak-justify-center"
      >
        <div
          class="catalogue"
        >
          <a
            class="handle oak-inline-flex oak-items-center oak-justify-center"
            draggable="false"
          >
            <i
              class="icon junipero-icons"
            >
              add
            </i>
          </a>
        </div>
      </div>
    </div>
    <div
      class="oak-flex oak-gap-2"
    >
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          undo
        </i>
      </button>
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          redo
        </i>
      </button>
    </div>
    <div
      class="floatings"
    />
  </div>
</div>
`;

exports[`<Builder /> > should allow to add content from catalogue > Content with text and row 1`] = `
<div>
  <div
    class="oak builder"
  >
    <div
      class="oak-flex oak-gap-2"
    >
      <button
        aria-disabled="false"
        class="junipero button"
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          undo
        </i>
      </button>
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          redo
        </i>
      </button>
    </div>
    <div
      class="elements oak-flex oak-flex-col oak-gap-4"
    >
      <div
        class="add-element oak-flex oak-justify-center"
      >
        <div
          class="catalogue"
        >
          <a
            class="handle oak-inline-flex oak-items-center oak-justify-center"
            draggable="false"
          >
            <i
              class="icon junipero-icons"
            >
              add
            </i>
          </a>
        </div>
      </div>
      <div
        class="oak element oak-flex-none type-text draggable"
        draggable="true"
      >
        <div
          class="inner oak-flex oak-gap-2 oak-p-4 oak-items-stretch even"
        >
          <i
            class="icon junipero-icons"
          >
            multiline
          </i>
          <div
            class="element-info oak-flex-auto oak-flex oak-flex-col oak-gap-2 oak-justify-between"
          >
            <div
              class="oak-flex oak-items-center"
            >
              <h6
                class="junipero oak-inline oak-m-0"
              >
                Text
              </h6>
            </div>
            <div
              class="element-content oak-flex-auto"
            >
              <div
                class="junipero sanitize-html"
              >
                This is some fancy text content
              </div>
            </div>
          </div>
        </div>
        <div
          class="options oak-flex oak-items-center"
        >
          <a
            class="option oak-flex oak-items-center oak-justify-center remove"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              close
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center duplicate"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              copy
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center copy"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              copy_file
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center edit"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              pen
            </i>
          </a>
        </div>
      </div>
      <div
        class="oak element oak-flex-none type-row"
        draggable="false"
      >
        <div
          class="wrapper even"
        >
          <div
            class="drop-zone before"
          />
          <div
            class="row-content oak-flex oak-flex-wrap oak-w-full oak-gap-2 oak-items-flex-start"
          >
            <div
              class="column oak-flex oak-max-w-full oak-items-center oak-gap-2 oak-py-2 oak-flex-1"
            >
              <a
                class="divider prepend oak-flex oak-items-center"
                draggable="false"
                href="#"
              >
                <i
                  class="icon junipero-icons !oak-text-lg"
                >
                  add
                </i>
              </a>
              <div
                class="col-inner oak-flex-auto oak-flex oak-flex-col oak-gap-2"
              >
                <div
                  class="catalogue oak-inline-flex oak-self-center small"
                >
                  <a
                    class="handle oak-inline-flex oak-items-center oak-justify-center"
                    draggable="false"
                  >
                    <i
                      class="icon junipero-icons"
                    >
                      add
                    </i>
                  </a>
                </div>
                <div
                  class="col-content oak-flex oak-flex-col oak-gap-4"
                >
                  <div
                    class="oak element oak-flex-none type-title draggable"
                    draggable="true"
                  >
                    <div
                      class="inner oak-flex oak-gap-2 oak-p-4 oak-items-stretch odd"
                    >
                      <i
                        class="icon junipero-icons"
                      >
                        title
                      </i>
                      <div
                        class="element-info oak-flex-auto oak-flex oak-flex-col oak-gap-2 oak-justify-between"
                      >
                        <div
                          class="oak-flex oak-items-center"
                        >
                          <h6
                            class="junipero oak-inline oak-m-0"
                          >
                            Title
                          </h6>
                        </div>
                        <div
                          class="element-content oak-flex-auto"
                        >
                          <h1
                            class="junipero oak-m-0 sanitize-html !oak-text-4xl"
                          >
                            This is a title
                          </h1>
                        </div>
                        <div
                          class="displayable-settings junipero extra !oak-text-alternate-text-color"
                        >
                          <span
                            class="property"
                          >
                            <span
                              class="key"
                            >
                              Type
                              : 
                            </span>
                            <span
                              class="value"
                            >
                              Title 1 (h1)
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="options oak-flex oak-items-center"
                    >
                      <a
                        class="option oak-flex oak-items-center oak-justify-center remove"
                        draggable="false"
                        href="#"
                      >
                        <i
                          class="icon junipero-icons !oak-text-lg"
                        >
                          close
                        </i>
                      </a>
                      <a
                        class="option oak-flex oak-items-center oak-justify-center duplicate"
                        draggable="false"
                        href="#"
                      >
                        <i
                          class="icon junipero-icons !oak-text-lg"
                        >
                          copy
                        </i>
                      </a>
                      <a
                        class="option oak-flex oak-items-center oak-justify-center copy"
                        draggable="false"
                        href="#"
                      >
                        <i
                          class="icon junipero-icons !oak-text-lg"
                        >
                          copy_file
                        </i>
                      </a>
                      <a
                        class="option oak-flex oak-items-center oak-justify-center edit"
                        draggable="false"
                        href="#"
                      >
                        <i
                          class="icon junipero-icons !oak-text-lg"
                        >
                          pen
                        </i>
                      </a>
                    </div>
                  </div>
                </div>
                <div
                  class="catalogue oak-inline-flex oak-self-center small"
                >
                  <a
                    class="handle oak-inline-flex oak-items-center oak-justify-center"
                    draggable="false"
                  >
                    <i
                      class="icon junipero-icons"
                    >
                      add
                    </i>
                  </a>
                </div>
              </div>
              <a
                class="divider append oak-flex oak-items-center"
                draggable="false"
                href="#"
              >
                <i
                  class="icon junipero-icons !oak-text-lg"
                >
                  add
                </i>
              </a>
              <div
                class="size-info oak-absolute oak-bottom-1 oak-left-1"
              >
                <span>
                  <i
                    class="icon junipero-icons !oak-text-alternate-text-color oak-rotate-90 oak-block oak-cursor-help"
                  >
                    foldable
                  </i>
                </span>
              </div>
              <div
                class="options oak-flex oak-items-center oak-gap-0.5"
              >
                <a
                  class="option oak-flex oak-items-center oak-justify-center edit"
                  draggable="false"
                  href="#"
                >
                  <i
                    class="icon junipero-icons !oak-text-lg"
                  >
                    pen
                  </i>
                </a>
                <a
                  class="option oak-flex oak-items-center oak-justify-center remove"
                  draggable="false"
                  href="#"
                >
                  <i
                    class="icon junipero-icons !oak-text-lg"
                  >
                    close
                  </i>
                </a>
              </div>
            </div>
          </div>
          <div
            class="drop-zone after"
          />
        </div>
        <div
          class="options oak-flex oak-items-center oak-has-inner-content"
        >
          <a
            class="option oak-flex oak-items-center oak-justify-center remove"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              close
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center duplicate"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              copy
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center copy"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              copy_file
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center option oak-drag-handle draggable"
            draggable="true"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              pause
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center option"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              expand_less
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center edit"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              pen
            </i>
          </a>
        </div>
      </div>
      <div
        class="add-element oak-flex oak-justify-center"
      >
        <div
          class="catalogue"
        >
          <a
            class="handle oak-inline-flex oak-items-center oak-justify-center"
            draggable="false"
          >
            <i
              class="icon junipero-icons"
            >
              add
            </i>
          </a>
        </div>
      </div>
    </div>
    <div
      class="oak-flex oak-gap-2"
    >
      <button
        aria-disabled="false"
        class="junipero button"
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          undo
        </i>
      </button>
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          redo
        </i>
      </button>
    </div>
    <div
      class="floatings"
    />
  </div>
</div>
`;

exports[`<Builder /> > should allow to add content from catalogue > Empty content 1`] = `
<div>
  <div
    class="oak builder"
  >
    <div
      class="oak-flex oak-gap-2"
    >
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          undo
        </i>
      </button>
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          redo
        </i>
      </button>
    </div>
    <div
      class="elements oak-flex oak-flex-col oak-gap-4"
    >
      <div
        class="add-element oak-flex oak-justify-center"
      >
        <div
          class="catalogue"
        >
          <a
            class="handle oak-inline-flex oak-items-center oak-justify-center"
            draggable="false"
          >
            <i
              class="icon junipero-icons"
            >
              add
            </i>
          </a>
        </div>
      </div>
    </div>
    <div
      class="oak-flex oak-gap-2"
    >
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          undo
        </i>
      </button>
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          redo
        </i>
      </button>
    </div>
    <div
      class="floatings"
    />
  </div>
</div>
`;

exports[`<Builder /> > should allow to add content from catalogue > Row with title 1`] = `
<div
  class="oak element oak-flex-none type-row"
  draggable="false"
>
  <div
    class="wrapper even"
  >
    <div
      class="drop-zone before"
    />
    <div
      class="row-content oak-flex oak-flex-wrap oak-w-full oak-gap-2 oak-items-flex-start"
    >
      <div
        class="column oak-flex oak-max-w-full oak-items-center oak-gap-2 oak-py-2 oak-flex-1"
      >
        <a
          class="divider prepend oak-flex oak-items-center"
          draggable="false"
          href="#"
        >
          <i
            class="icon junipero-icons !oak-text-lg"
          >
            add
          </i>
        </a>
        <div
          class="col-inner oak-flex-auto oak-flex oak-flex-col oak-gap-2"
        >
          <div
            class="catalogue oak-inline-flex oak-self-center small"
          >
            <a
              class="handle oak-inline-flex oak-items-center oak-justify-center"
              draggable="false"
            >
              <i
                class="icon junipero-icons"
              >
                add
              </i>
            </a>
          </div>
          <div
            class="col-content oak-flex oak-flex-col oak-gap-4"
          >
            <div
              class="oak element oak-flex-none type-title draggable"
              draggable="true"
            >
              <div
                class="inner oak-flex oak-gap-2 oak-p-4 oak-items-stretch odd"
              >
                <i
                  class="icon junipero-icons"
                >
                  title
                </i>
                <div
                  class="element-info oak-flex-auto oak-flex oak-flex-col oak-gap-2 oak-justify-between"
                >
                  <div
                    class="oak-flex oak-items-center"
                  >
                    <h6
                      class="junipero oak-inline oak-m-0"
                    >
                      Title
                    </h6>
                  </div>
                  <div
                    class="element-content oak-flex-auto"
                  >
                    <h1
                      class="junipero oak-m-0 sanitize-html !oak-text-4xl"
                    >
                      This is a title
                    </h1>
                  </div>
                  <div
                    class="displayable-settings junipero extra !oak-text-alternate-text-color"
                  >
                    <span
                      class="property"
                    >
                      <span
                        class="key"
                      >
                        Type
                        : 
                      </span>
                      <span
                        class="value"
                      >
                        Title 1 (h1)
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="options oak-flex oak-items-center"
              >
                <a
                  class="option oak-flex oak-items-center oak-justify-center remove"
                  draggable="false"
                  href="#"
                >
                  <i
                    class="icon junipero-icons !oak-text-lg"
                  >
                    close
                  </i>
                </a>
                <a
                  class="option oak-flex oak-items-center oak-justify-center duplicate"
                  draggable="false"
                  href="#"
                >
                  <i
                    class="icon junipero-icons !oak-text-lg"
                  >
                    copy
                  </i>
                </a>
                <a
                  class="option oak-flex oak-items-center oak-justify-center copy"
                  draggable="false"
                  href="#"
                >
                  <i
                    class="icon junipero-icons !oak-text-lg"
                  >
                    copy_file
                  </i>
                </a>
                <a
                  class="option oak-flex oak-items-center oak-justify-center edit"
                  draggable="false"
                  href="#"
                >
                  <i
                    class="icon junipero-icons !oak-text-lg"
                  >
                    pen
                  </i>
                </a>
              </div>
            </div>
          </div>
          <div
            class="catalogue oak-inline-flex oak-self-center small"
          >
            <a
              class="handle oak-inline-flex oak-items-center oak-justify-center"
              draggable="false"
            >
              <i
                class="icon junipero-icons"
              >
                add
              </i>
            </a>
          </div>
        </div>
        <a
          class="divider append oak-flex oak-items-center"
          draggable="false"
          href="#"
        >
          <i
            class="icon junipero-icons !oak-text-lg"
          >
            add
          </i>
        </a>
        <div
          class="size-info oak-absolute oak-bottom-1 oak-left-1"
        >
          <span>
            <i
              class="icon junipero-icons !oak-text-alternate-text-color oak-rotate-90 oak-block oak-cursor-help"
            >
              foldable
            </i>
          </span>
        </div>
        <div
          class="options oak-flex oak-items-center oak-gap-0.5"
        >
          <a
            class="option oak-flex oak-items-center oak-justify-center edit"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              pen
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center remove"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              close
            </i>
          </a>
        </div>
      </div>
    </div>
    <div
      class="drop-zone after"
    />
  </div>
  <div
    class="options oak-flex oak-items-center oak-has-inner-content"
  >
    <a
      class="option oak-flex oak-items-center oak-justify-center remove"
      draggable="false"
      href="#"
    >
      <i
        class="icon junipero-icons !oak-text-lg"
      >
        close
      </i>
    </a>
    <a
      class="option oak-flex oak-items-center oak-justify-center duplicate"
      draggable="false"
      href="#"
    >
      <i
        class="icon junipero-icons !oak-text-lg"
      >
        copy
      </i>
    </a>
    <a
      class="option oak-flex oak-items-center oak-justify-center copy"
      draggable="false"
      href="#"
    >
      <i
        class="icon junipero-icons !oak-text-lg"
      >
        copy_file
      </i>
    </a>
    <a
      class="option oak-flex oak-items-center oak-justify-center option oak-drag-handle draggable"
      draggable="true"
      href="#"
    >
      <i
        class="icon junipero-icons !oak-text-lg"
      >
        pause
      </i>
    </a>
    <a
      class="option oak-flex oak-items-center oak-justify-center option"
      draggable="false"
      href="#"
    >
      <i
        class="icon junipero-icons !oak-text-lg"
      >
        expand_less
      </i>
    </a>
    <a
      class="option oak-flex oak-items-center oak-justify-center edit"
      draggable="false"
      href="#"
    >
      <i
        class="icon junipero-icons !oak-text-lg"
      >
        pen
      </i>
    </a>
  </div>
</div>
`;

exports[`<Builder /> > should allow to add content programmatically > Content with title 1`] = `
<div>
  <div>
    <button
      data-testid="button"
    >
      Add title
    </button>
    <div
      class="oak builder"
    >
      <div
        class="oak-flex oak-gap-2"
      >
        <button
          aria-disabled="false"
          class="junipero button"
          role="button"
          type="button"
        >
          <i
            class="icon junipero-icons"
          >
            undo
          </i>
        </button>
        <button
          aria-disabled="true"
          class="junipero button disabled"
          disabled=""
          role="button"
          type="button"
        >
          <i
            class="icon junipero-icons"
          >
            redo
          </i>
        </button>
      </div>
      <div
        class="elements oak-flex oak-flex-col oak-gap-4"
      >
        <div
          class="add-element oak-flex oak-justify-center"
        >
          <div
            class="catalogue"
          >
            <a
              class="handle oak-inline-flex oak-items-center oak-justify-center"
              draggable="false"
            >
              <i
                class="icon junipero-icons"
              >
                add
              </i>
            </a>
          </div>
        </div>
        <div
          class="oak element oak-flex-none type-title draggable"
          draggable="true"
        >
          <div
            class="inner oak-flex oak-gap-2 oak-p-4 oak-items-stretch even"
          >
            <i
              class="icon junipero-icons"
            >
              title
            </i>
            <div
              class="element-info oak-flex-auto oak-flex oak-flex-col oak-gap-2 oak-justify-between"
            >
              <div
                class="oak-flex oak-items-center"
              >
                <h6
                  class="junipero oak-inline oak-m-0"
                >
                  Title
                </h6>
              </div>
              <div
                class="element-content oak-flex-auto"
              >
                <h1
                  class="junipero oak-m-0 sanitize-html !oak-text-4xl"
                >
                  This is a title
                </h1>
              </div>
              <div
                class="displayable-settings junipero extra !oak-text-alternate-text-color"
              >
                <span
                  class="property"
                >
                  <span
                    class="key"
                  >
                    Type
                    : 
                  </span>
                  <span
                    class="value"
                  >
                    Title 1 (h1)
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="options oak-flex oak-items-center"
          >
            <a
              class="option oak-flex oak-items-center oak-justify-center remove"
              draggable="false"
              href="#"
            >
              <i
                class="icon junipero-icons !oak-text-lg"
              >
                close
              </i>
            </a>
            <a
              class="option oak-flex oak-items-center oak-justify-center duplicate"
              draggable="false"
              href="#"
            >
              <i
                class="icon junipero-icons !oak-text-lg"
              >
                copy
              </i>
            </a>
            <a
              class="option oak-flex oak-items-center oak-justify-center copy"
              draggable="false"
              href="#"
            >
              <i
                class="icon junipero-icons !oak-text-lg"
              >
                copy_file
              </i>
            </a>
            <a
              class="option oak-flex oak-items-center oak-justify-center edit"
              draggable="false"
              href="#"
            >
              <i
                class="icon junipero-icons !oak-text-lg"
              >
                pen
              </i>
            </a>
          </div>
        </div>
        <div
          class="add-element oak-flex oak-justify-center"
        >
          <div
            class="catalogue"
          >
            <a
              class="handle oak-inline-flex oak-items-center oak-justify-center"
              draggable="false"
            >
              <i
                class="icon junipero-icons"
              >
                add
              </i>
            </a>
          </div>
        </div>
      </div>
      <div
        class="oak-flex oak-gap-2"
      >
        <button
          aria-disabled="false"
          class="junipero button"
          role="button"
          type="button"
        >
          <i
            class="icon junipero-icons"
          >
            undo
          </i>
        </button>
        <button
          aria-disabled="true"
          class="junipero button disabled"
          disabled=""
          role="button"
          type="button"
        >
          <i
            class="icon junipero-icons"
          >
            redo
          </i>
        </button>
      </div>
      <div
        class="floatings"
      />
    </div>
  </div>
</div>
`;

exports[`<Builder /> > should allow to add content programmatically > Empty content 1`] = `
<div>
  <div>
    <button
      data-testid="button"
    >
      Add title
    </button>
    <div
      class="oak builder"
    >
      <div
        class="oak-flex oak-gap-2"
      >
        <button
          aria-disabled="true"
          class="junipero button disabled"
          disabled=""
          role="button"
          type="button"
        >
          <i
            class="icon junipero-icons"
          >
            undo
          </i>
        </button>
        <button
          aria-disabled="true"
          class="junipero button disabled"
          disabled=""
          role="button"
          type="button"
        >
          <i
            class="icon junipero-icons"
          >
            redo
          </i>
        </button>
      </div>
      <div
        class="elements oak-flex oak-flex-col oak-gap-4"
      >
        <div
          class="add-element oak-flex oak-justify-center"
        >
          <div
            class="catalogue"
          >
            <a
              class="handle oak-inline-flex oak-items-center oak-justify-center"
              draggable="false"
            >
              <i
                class="icon junipero-icons"
              >
                add
              </i>
            </a>
          </div>
        </div>
      </div>
      <div
        class="oak-flex oak-gap-2"
      >
        <button
          aria-disabled="true"
          class="junipero button disabled"
          disabled=""
          role="button"
          type="button"
        >
          <i
            class="icon junipero-icons"
          >
            undo
          </i>
        </button>
        <button
          aria-disabled="true"
          class="junipero button disabled"
          disabled=""
          role="button"
          type="button"
        >
          <i
            class="icon junipero-icons"
          >
            redo
          </i>
        </button>
      </div>
      <div
        class="floatings"
      />
    </div>
  </div>
</div>
`;

exports[`<Builder /> > should allow to render editable inside a modal > Catalogue opened 1`] = `
<div
  class="floatings"
>
  <div
    class="catalogue-menu"
    data-floating-ui-focusable=""
    data-placement="bottom"
    style="position: absolute; top: 0px; left: 0px;"
    tabindex="-1"
  >
    <div
      class="groups"
    >
      <div
        class="junipero tabs"
      >
        <ul
          class="titles"
        >
          <li
            class="title active"
          >
            <a
              href="#"
            >
              Core components
            </a>
          </li>
        </ul>
        <div
          class="content"
        >
          <div
            class="tab"
          >
            <div
              class="group oak-grid oak-grid-cols-2 oak-gap-2"
            >
              <a
                class="component component-row oak-flex oak-items-center oak-px-2 oak-py-1 oak-gap-2 junipero"
                draggable="false"
                href="#"
              >
                <i
                  class="icon junipero-icons !oak-text-2xl"
                >
                  row
                </i>
                <span
                  class="name"
                >
                  Row
                </span>
              </a>
              <a
                class="component component-empty-space oak-flex oak-items-center oak-px-2 oak-py-1 oak-gap-2 junipero"
                draggable="false"
                href="#"
              >
                <i
                  class="icon junipero-icons !oak-text-2xl"
                >
                  blank_space
                </i>
                <span
                  class="name"
                >
                  Blank space
                </span>
              </a>
              <a
                class="component component-title oak-flex oak-items-center oak-px-2 oak-py-1 oak-gap-2 junipero"
                draggable="false"
                href="#"
              >
                <i
                  class="icon junipero-icons !oak-text-2xl"
                >
                  title
                </i>
                <span
                  class="name"
                >
                  Title
                </span>
              </a>
              <a
                class="component component-text oak-flex oak-items-center oak-px-2 oak-py-1 oak-gap-2 junipero"
                draggable="false"
                href="#"
              >
                <i
                  class="icon junipero-icons !oak-text-2xl"
                >
                  multiline
                </i>
                <span
                  class="name"
                >
                  Text
                </span>
              </a>
              <a
                class="component component-image oak-flex oak-items-center oak-px-2 oak-py-1 oak-gap-2 junipero"
                draggable="false"
                href="#"
              >
                <i
                  class="icon junipero-icons !oak-text-2xl"
                >
                  image
                </i>
                <span
                  class="name"
                >
                  Image
                </span>
              </a>
              <a
                class="component component-button oak-flex oak-items-center oak-px-2 oak-py-1 oak-gap-2 junipero"
                draggable="false"
                href="#"
              >
                <i
                  class="icon junipero-icons !oak-text-2xl"
                >
                  button
                </i>
                <span
                  class="name"
                >
                  Button
                </span>
              </a>
              <a
                class="component component-foldable oak-flex oak-items-center oak-px-2 oak-py-1 oak-gap-2 junipero"
                draggable="false"
                href="#"
              >
                <i
                  class="icon junipero-icons !oak-text-2xl"
                >
                  foldable
                </i>
                <span
                  class="name"
                >
                  Foldable
                </span>
              </a>
              <a
                class="component component-clickable oak-flex oak-items-center oak-px-2 oak-py-1 oak-gap-2 junipero"
                draggable="false"
                href="#"
              >
                <i
                  class="icon junipero-icons !oak-text-2xl"
                >
                  clickable
                </i>
                <span
                  class="name"
                >
                  Clickable
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Builder /> > should allow to render editable inside a modal > Title editable 1`] = `
<div>
  <div
    class="oak builder"
  >
    <div
      class="oak-flex oak-gap-2"
    >
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          undo
        </i>
      </button>
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          redo
        </i>
      </button>
    </div>
    <div
      class="elements oak-flex oak-flex-col oak-gap-4"
    >
      <div
        class="add-element oak-flex oak-justify-center"
      >
        <div
          class="catalogue"
        >
          <a
            class="handle oak-inline-flex oak-items-center oak-justify-center"
            draggable="false"
          >
            <i
              class="icon junipero-icons"
            >
              add
            </i>
          </a>
        </div>
      </div>
      <div
        class="oak element oak-flex-none type-title draggable"
        draggable="true"
      >
        <div
          class="inner oak-flex oak-gap-2 oak-p-4 oak-items-stretch even"
        >
          <i
            class="icon junipero-icons"
          >
            title
          </i>
          <div
            class="element-info oak-flex-auto oak-flex oak-flex-col oak-gap-2 oak-justify-between"
          >
            <div
              class="oak-flex oak-items-center"
            >
              <h6
                class="junipero oak-inline oak-m-0"
              >
                Title
              </h6>
            </div>
            <div
              class="element-content oak-flex-auto"
            >
              <h1
                class="junipero oak-m-0 sanitize-html !oak-text-4xl"
              >
                This is a title
              </h1>
            </div>
            <div
              class="displayable-settings junipero extra !oak-text-alternate-text-color"
            >
              <span
                class="property"
              >
                <span
                  class="key"
                >
                  Type
                  : 
                </span>
                <span
                  class="value"
                >
                  Title 1 (h1)
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="options oak-flex oak-items-center"
        >
          <a
            class="option oak-flex oak-items-center oak-justify-center remove"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              close
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center duplicate"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              copy
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center copy"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              copy_file
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center edit"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              pen
            </i>
          </a>
        </div>
      </div>
      <div
        class="add-element oak-flex oak-justify-center"
      >
        <div
          class="catalogue"
        >
          <a
            class="handle oak-inline-flex oak-items-center oak-justify-center"
            draggable="false"
          >
            <i
              class="icon junipero-icons"
            >
              add
            </i>
          </a>
        </div>
      </div>
    </div>
    <div
      class="oak-flex oak-gap-2"
    >
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          undo
        </i>
      </button>
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          redo
        </i>
      </button>
    </div>
    <div
      class="floatings"
    >
      <div
        class="junipero modal opened panel editable jp-slide-in-left-modal-enter"
      >
        <div
          class="wrapper"
          tabindex="0"
        >
          <div
            class="content"
          >
            <div
              class="form"
            >
              <div
                class="form-title junipero oak-flex oak-py-2 oak-px-5 oak-sticky oak-top-0 oak-z-10"
              >
                Title options
              </div>
              <div
                class="junipero tabs"
              >
                <ul
                  class="titles"
                >
                  <li
                    class="title active"
                  >
                    <a
                      href="#"
                    >
                      Settings
                    </a>
                  </li>
                  <li
                    class="title"
                  >
                    <a
                      href="#"
                    >
                      Styling
                    </a>
                  </li>
                  <li
                    class="title"
                  >
                    <a
                      href="#"
                    >
                      Responsive
                    </a>
                  </li>
                  <li
                    class="title"
                  >
                    <a
                      href="#"
                    >
                      Accessibility
                    </a>
                  </li>
                </ul>
                <div
                  class="content"
                >
                  <div
                    class="tab"
                  >
                    <div
                      class="fields oak-py-2 oak-flex oak-flex-col oak-gap-4"
                    >
                      <div
                        class="field oak-px-[20px]"
                      >
                        <label
                          class="junipero label oak-flex oak-items-center oak-gap-2 !oak-pt-0"
                        >
                          Type
                        </label>
                        <div
                          class="junipero dropdown select-field pristine valid searchable"
                          id="junipero-select-field-_r_24_"
                        >
                          <div
                            class="field dropdown-toggle"
                            id="junipero-select-field-_r_24_-toggle"
                          >
                            <input
                              id="junipero-select-field-_r_24_-field"
                              readonly=""
                              type="text"
                              value="Title 1 (h1)"
                            />
                            <div
                              class="icons"
                            >
                              <svg
                                class="junipero icon arrows"
                                height="13"
                                viewBox="0 0 8 13"
                                width="8"
                              >
                                <path
                                  d="M1 4.5L4 1.5L7 4.5"
                                />
                                <path
                                  d="M1 8.5L4 11.5L7 8.5"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="field oak-px-[20px]"
                      >
                        <label
                          class="junipero label oak-flex oak-items-center oak-gap-2 !oak-pt-0"
                        >
                          Content
                        </label>
                        <div
                          class="junipero text-field pristine valid"
                        >
                          <textarea
                            class="field"
                            rows="5"
                            tag="textarea"
                          >
                            This is a title
                          </textarea>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="buttons oak-flex oak-items-center oak-justify-end oak-gap-2 oak-p-5 oak-z-20"
              >
                <button
                  class="junipero button subtle"
                  role="button"
                  type="button"
                >
                  Cancel
                </button>
                <button
                  class="junipero button primary"
                  role="button"
                  type="button"
                >
                  Save
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Builder /> > should render > Base content 1`] = `
<div>
  <div
    class="oak builder"
  >
    <div
      class="oak-flex oak-gap-2"
    >
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          undo
        </i>
      </button>
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          redo
        </i>
      </button>
    </div>
    <div
      class="elements oak-flex oak-flex-col oak-gap-4"
    >
      <div
        class="add-element oak-flex oak-justify-center"
      >
        <div
          class="catalogue"
        >
          <a
            class="handle oak-inline-flex oak-items-center oak-justify-center"
            draggable="false"
          >
            <i
              class="icon junipero-icons"
            >
              add
            </i>
          </a>
        </div>
      </div>
      <div
        class="oak element oak-flex-none type-title draggable"
        draggable="true"
      >
        <div
          class="inner oak-flex oak-gap-2 oak-p-4 oak-items-stretch even"
        >
          <i
            class="icon junipero-icons"
          >
            title
          </i>
          <div
            class="element-info oak-flex-auto oak-flex oak-flex-col oak-gap-2 oak-justify-between"
          >
            <div
              class="oak-flex oak-items-center"
            >
              <h6
                class="junipero oak-inline oak-m-0"
              >
                Title
              </h6>
            </div>
            <div
              class="element-content oak-flex-auto"
            >
              <h1
                class="junipero oak-m-0 sanitize-html !oak-text-4xl"
              >
                This is a title
              </h1>
            </div>
            <div
              class="displayable-settings junipero extra !oak-text-alternate-text-color"
            >
              <span
                class="property"
              >
                <span
                  class="key"
                >
                  Type
                  : 
                </span>
                <span
                  class="value"
                >
                  Title 1 (h1)
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="options oak-flex oak-items-center"
        >
          <a
            class="option oak-flex oak-items-center oak-justify-center remove"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              close
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center duplicate"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              copy
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center copy"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              copy_file
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center edit"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              pen
            </i>
          </a>
        </div>
      </div>
      <div
        class="oak element oak-flex-none type-text draggable"
        draggable="true"
      >
        <div
          class="inner oak-flex oak-gap-2 oak-p-4 oak-items-stretch even"
        >
          <i
            class="icon junipero-icons"
          >
            multiline
          </i>
          <div
            class="element-info oak-flex-auto oak-flex oak-flex-col oak-gap-2 oak-justify-between"
          >
            <div
              class="oak-flex oak-items-center"
            >
              <h6
                class="junipero oak-inline oak-m-0"
              >
                Text
              </h6>
            </div>
            <div
              class="element-content oak-flex-auto"
            >
              <div
                class="junipero sanitize-html"
              >
                This is a text
              </div>
            </div>
          </div>
        </div>
        <div
          class="options oak-flex oak-items-center"
        >
          <a
            class="option oak-flex oak-items-center oak-justify-center remove"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              close
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center duplicate"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              copy
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center copy"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              copy_file
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center edit"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              pen
            </i>
          </a>
        </div>
      </div>
      <div
        class="add-element oak-flex oak-justify-center"
      >
        <div
          class="catalogue"
        >
          <a
            class="handle oak-inline-flex oak-items-center oak-justify-center"
            draggable="false"
          >
            <i
              class="icon junipero-icons"
            >
              add
            </i>
          </a>
        </div>
      </div>
    </div>
    <div
      class="oak-flex oak-gap-2"
    >
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          undo
        </i>
      </button>
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          redo
        </i>
      </button>
    </div>
    <div
      class="floatings"
    />
  </div>
</div>
`;

exports[`<Builder /> > shouldn't display any catalogue button if disabled > No catalogue buttons 1`] = `
<div>
  <div
    class="oak builder"
  >
    <div
      class="oak-flex oak-gap-2"
    >
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          undo
        </i>
      </button>
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          redo
        </i>
      </button>
    </div>
    <div
      class="elements oak-flex oak-flex-col oak-gap-4 oak-py-8"
    />
    <div
      class="oak-flex oak-gap-2"
    >
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          undo
        </i>
      </button>
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          redo
        </i>
      </button>
    </div>
    <div
      class="floatings"
    />
  </div>
</div>
`;

exports[`<Builder /> > shouldn't display any option to remove an element > Remove options disabled 1`] = `
<div>
  <div
    class="oak builder"
  >
    <div
      class="oak-flex oak-gap-2"
    >
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          undo
        </i>
      </button>
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          redo
        </i>
      </button>
    </div>
    <div
      class="elements oak-flex oak-flex-col oak-gap-4"
    >
      <div
        class="add-element oak-flex oak-justify-center"
      >
        <div
          class="catalogue"
        >
          <a
            class="handle oak-inline-flex oak-items-center oak-justify-center"
            draggable="false"
          >
            <i
              class="icon junipero-icons"
            >
              add
            </i>
          </a>
        </div>
      </div>
      <div
        class="oak element oak-flex-none type-title draggable"
        draggable="true"
      >
        <div
          class="inner oak-flex oak-gap-2 oak-p-4 oak-items-stretch even"
        >
          <i
            class="icon junipero-icons"
          >
            title
          </i>
          <div
            class="element-info oak-flex-auto oak-flex oak-flex-col oak-gap-2 oak-justify-between"
          >
            <div
              class="oak-flex oak-items-center"
            >
              <h6
                class="junipero oak-inline oak-m-0"
              >
                Title
              </h6>
            </div>
            <div
              class="element-content oak-flex-auto"
            >
              <h1
                class="junipero oak-m-0 sanitize-html !oak-text-4xl"
              >
                This is a title
              </h1>
            </div>
            <div
              class="displayable-settings junipero extra !oak-text-alternate-text-color"
            >
              <span
                class="property"
              >
                <span
                  class="key"
                >
                  Type
                  : 
                </span>
                <span
                  class="value"
                >
                  Title 1 (h1)
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="options oak-flex oak-items-center"
        >
          <a
            class="option oak-flex oak-items-center oak-justify-center duplicate"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              copy
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center copy"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              copy_file
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center edit"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              pen
            </i>
          </a>
        </div>
      </div>
      <div
        class="add-element oak-flex oak-justify-center"
      >
        <div
          class="catalogue"
        >
          <a
            class="handle oak-inline-flex oak-items-center oak-justify-center"
            draggable="false"
          >
            <i
              class="icon junipero-icons"
            >
              add
            </i>
          </a>
        </div>
      </div>
    </div>
    <div
      class="oak-flex oak-gap-2"
    >
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          undo
        </i>
      </button>
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          redo
        </i>
      </button>
    </div>
    <div
      class="floatings"
    />
  </div>
</div>
`;

exports[`<Builder /> > shouldn't display button to add a new column if container editing is disabled > Container editing disabled 1`] = `
<div>
  <div
    class="oak builder"
  >
    <div
      class="oak-flex oak-gap-2"
    >
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          undo
        </i>
      </button>
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          redo
        </i>
      </button>
    </div>
    <div
      class="elements oak-flex oak-flex-col oak-gap-4"
    >
      <div
        class="add-element oak-flex oak-justify-center"
      >
        <div
          class="catalogue"
        >
          <a
            class="handle oak-inline-flex oak-items-center oak-justify-center"
            draggable="false"
          >
            <i
              class="icon junipero-icons"
            >
              add
            </i>
          </a>
        </div>
      </div>
      <div
        class="oak element oak-flex-none type-row"
        draggable="false"
      >
        <div
          class="wrapper even"
        >
          <div
            class="drop-zone before"
          />
          <div
            class="row-content oak-flex oak-flex-wrap oak-w-full oak-gap-2 oak-items-flex-start"
          >
            <div
              class="column oak-flex oak-max-w-full oak-items-center oak-gap-2 oak-py-2 oak-flex-1 oak-py-8 oak-px-4"
            >
              <div
                class="col-inner oak-flex-auto oak-flex oak-flex-col oak-gap-2"
              >
                <div
                  class="catalogue oak-inline-flex oak-self-center"
                >
                  <a
                    class="handle oak-inline-flex oak-items-center oak-justify-center"
                    draggable="false"
                  >
                    <i
                      class="icon junipero-icons"
                    >
                      add
                    </i>
                  </a>
                </div>
              </div>
              <div
                class="size-info oak-absolute oak-bottom-1 oak-left-1"
              >
                <span>
                  <i
                    class="icon junipero-icons !oak-text-alternate-text-color oak-rotate-90 oak-block oak-cursor-help"
                  >
                    foldable
                  </i>
                </span>
              </div>
              <div
                class="options oak-flex oak-items-center oak-gap-0.5"
              >
                <a
                  class="option oak-flex oak-items-center oak-justify-center edit"
                  draggable="false"
                  href="#"
                >
                  <i
                    class="icon junipero-icons !oak-text-lg"
                  >
                    pen
                  </i>
                </a>
                <a
                  class="option oak-flex oak-items-center oak-justify-center remove"
                  draggable="false"
                  href="#"
                >
                  <i
                    class="icon junipero-icons !oak-text-lg"
                  >
                    close
                  </i>
                </a>
              </div>
            </div>
          </div>
          <div
            class="drop-zone after"
          />
        </div>
        <div
          class="options oak-flex oak-items-center oak-has-inner-content"
        >
          <a
            class="option oak-flex oak-items-center oak-justify-center remove"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              close
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center duplicate"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              copy
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center copy"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              copy_file
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center option oak-drag-handle draggable"
            draggable="true"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              pause
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center option"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              expand_less
            </i>
          </a>
          <a
            class="option oak-flex oak-items-center oak-justify-center edit"
            draggable="false"
            href="#"
          >
            <i
              class="icon junipero-icons !oak-text-lg"
            >
              pen
            </i>
          </a>
        </div>
      </div>
      <div
        class="add-element oak-flex oak-justify-center"
      >
        <div
          class="catalogue"
        >
          <a
            class="handle oak-inline-flex oak-items-center oak-justify-center"
            draggable="false"
          >
            <i
              class="icon junipero-icons"
            >
              add
            </i>
          </a>
        </div>
      </div>
    </div>
    <div
      class="oak-flex oak-gap-2"
    >
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          undo
        </i>
      </button>
      <button
        aria-disabled="true"
        class="junipero button disabled"
        disabled=""
        role="button"
        type="button"
      >
        <i
          class="icon junipero-icons"
        >
          redo
        </i>
      </button>
    </div>
    <div
      class="floatings"
    />
  </div>
</div>
`;
